# flip-flop

./: index.html  package-lock.json  package.json  prononciation.js  script.js  style.css
FlipFlop2/: .taurignore  db_conf.sh  package-lock.json  package.json
FlipFlop2/src/: App.tsx
FlipFlop2/src-tauri/: Cargo.toml  tauri.conf.json
FlipFlop2/src-tauri/src/: main.rs
FlipFlop2/src/pages/: AddPage.tsx  Home.tsx  ListPage.tsx
data/: data.js  ex_cambridge.js  ex_cambridge_2.js
